# jupyter-save-load-vars

./: CHANGELOG.md  README.md  jupyter_save_load_vars.py  pyproject.toml  requirements.txt  saveloadvars.py
tests/: jupyter_save_load_vars_test.py  save_load_vars_test.py  saveloadvars_test.ipynb  test_jupyter_save_load_vars.py
