# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#uploading-your-package-to-pypi
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-save-load-vars"
version = "0.1.1"
authors = [
  { name="Tobi Delbruck", email="tobidelbruck@gmail.com" },
]
description = "Saves and loads variables to/from a IPython/Jupyter workspac"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dill>=0.3.7",
]
[project.optional-dependencies]
dev = ["flake8", "pytest"]

[project.urls]
"Homepage" = "https://github.com/tobidelbruck/saveloadvars"
"Bug Tracker" = "https://github.com/tobidelbruck/saveloadvars/issues"